# picsellia-cv-engine

./: .pre-commit-config.yaml  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: processing_tiler_docker_build.yaml  publish.yaml  update_docs.yaml
api/: index.html
api/core/contexts/common/picsellia_context/: index.html
api/core/contexts/training/local_context/: index.html
api/core/contexts/training/local_training_context/: index.html
api/core/contexts/training/picsellia_context/: index.html
api/core/contexts/training/picsellia_training_context/: index.html
api/core/data/datalake/datalake/: index.html
api/core/data/datalake/datalake_collection/: index.html
api/core/data/dataset/base_dataset/: index.html
api/core/data/dataset/utils/: index.html
api/core/models/model/: index.html
api/core/models/model_collection/: index.html
api/core/models/model_downloader/: index.html
api/core/models/picsellia_prediction/: index.html
api/core/parameters/augmentation_parameters/: index.html
api/core/parameters/base_parameters/: index.html
api/core/parameters/export_parameters/: index.html
api/core/parameters/hyper_parameters/: index.html
api/core/step_metadata/: index.html
api/decorators/pipeline_decorator/: index.html
api/decorators/step_decorator/: index.html
api/decorators/step_metadata/: index.html
docs/: api.md  index.md  installation.md  usage.md
docs/api/: index.md
docs/api/core/: step_metadata.md
docs/api/core/models/: model.md  model_collection.md  model_downloader.md  picsellia_prediction.md
docs/api/core/parameters/: augmentation_parameters.md  base_parameters.md  export_parameters.md  hyper_parameters.md
docs/api/decorators/: pipeline_decorator.md  step_decorator.md  step_metadata.md
docs/api/models/model/: model_collection.md  model_context.md  model_downloader.md  picsellia_prediction.md
docs/api/models/parameters/: augmentation_parameters.md  base_parameters.md  export_parameters.md  hyper_parameters.md
docs/api/steps/datalake/: loader.md
docs/api/steps/dataset/: loader.md  preprocessor.md  uploader.md  validator.md
docs/api/steps/model/: loader.md
docs/scripts/: generate_docs.py
docs/usage/: cli_overview.md  index.md
docs/usage/commands/: deploy.md  init.md  test.md
docs/usage/processing/: datalake.md  dataset_version.md  dataset_version_creation.md  model_version.md  pre_annotation.md  simple.md
docs/usage/training/: simple.md  simple_training.md  ultralytics.md  yolov8.md
installation/: index.html
search/: search_index.json
src/picsellia_cv_engine/: __init__.py  enums.py  logger.py
src/picsellia_cv_engine/core/: __init__.py
src/picsellia_cv_engine/core/logging/: colors.py  stream_to_logger.py
src/picsellia_cv_engine/core/models/: __init__.py  model.py  model_collection.py  model_downloader.py  picsellia_prediction.py
src/picsellia_cv_engine/core/parameters/: __init__.py
src/picsellia_cv_engine/decorators/: __init__.py  pipeline_decorator.py  step_decorator.py
src/picsellia_cv_engine/models/: __init__.py
src/picsellia_cv_engine/models/dataset/: base_dataset_context.py  coco_dataset_context.py  datalake_collection.py  datalake_context.py  dataset_collection.py  yolo_dataset_context.py
src/picsellia_cv_engine/models/model/: __init__.py  model.py  model_collection.py  model_context.py  picsellia_prediction.py
src/picsellia_cv_engine/models/parameters/: __init__.py  augmentation_parameters.py  base_parameters.py  export_parameters.py  hyper_parameters.py  parameters.py
src/picsellia_cv_engine/models/steps/: step_metadata.py
src/picsellia_cv_engine/models/utils/: dataset_logging.py  local_context.py  picsellia_context.py  processing_creation.py
src/picsellia_cv_engine/steps/data_extraction/: coco_data_extractor.py  processing_data_extractor.py
src/picsellia_cv_engine/steps/data_preparation/: classification_data_preparator.py
src/picsellia_cv_engine/steps/data_upload/: annotations_uploader.py  classification_dataset_context_uploader.py  dataset_context_uploader.py  object_detection_dataset_context_uploader.py  upload_utils.py
src/picsellia_cv_engine/steps/data_validation/: coco_classification_dataset_collection_validator.py  coco_segmentation_dataset_collection_validator.py  data_validator.py  yolo_object_detection_dataset_collection_validator.py  yolo_segmentation_dataset_collection_validator.py
src/picsellia_cv_engine/steps/datalake/: loader.py
src/picsellia_cv_engine/steps/dataset/: loader.py  preprocessor.py  uploader.py  validator.py
src/picsellia_cv_engine/steps/model/: loader.py
src/picsellia_cv_engine/steps/weights_extraction/: training_weights_extractor.py
tests/decorators/: conftest.py  test_pipeline_decorator.py  test_step_decorator.py
tests/decorators/fixtures/: pipeline_fixtures.py
tests/logger/: test_logger_manager.py
tests/models/dataset/common/: test_dataset_collection.py  test_dataset_context.py
tests/models/parameters/processing/: test_processing_diversified_data_extractor_parameters.py
tests/steps/data_extraction/training/: test_training_data_extractor.py
tests/steps/data_preparation/common/: test_classification_data_preparator.py
tests/steps/data_validation/common/: test_classification_data_validator.py  test_data_validator.py
tests/steps/fixtures/: dataset_version_fixtures.py  integration_tests_fixtures.py
tests/steps/model_loader/processing/: test_diversified_data_extractor_model_loader_step.py
tests/steps/weights_validation/processing/: test_diversified_data_extractor_weights_validation_step.py
usage/: index.html
usage/cli_overview/: index.html
usage/commands/deploy/: index.html
usage/commands/init/: index.html
usage/commands/test/: index.html
usage/processing/datalake/: index.html
usage/processing/dataset_version/: index.html
usage/processing/dataset_version_creation/: index.html
usage/processing/model_version/: index.html
usage/processing/pre_annotation/: index.html
usage/training/simple_training/: index.html
usage/training/ultralytics/: index.html
(+424 files in other folders)
