[project]
name = "picsellia-cv-engine"
version = "0.1.0"
description = ""
authors = [
    { name = "SoniaGrh", email = "sonia.garrouch@hotmail.fr" }
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
picsellia = ">=6.20.0,<7.0.0"
tabulate = ">=0.8,<0.10"
numpy = ">=1.21,<2.0.0"
pandas = ">=1.3,<3.0.0"
pycocotools = ">=2.0.4,<3.0.0"
scikit-learn = ">=1.1,<1.7"

torch = { version = ">=1.13,<3.0", optional = true }
ultralytics = { version = ">=8.0,<9.0", optional = true }

[tool.poetry.extras]
ultralytics = ["torch==2.7.1", "ultralytics==8.3.174"]
clip = [
    "torch==2.7.1",
    "torchvision==0.22.1",
    "datasets==4.0.0",
    "Pillow==10.3.0",
    "transformers==4.54.1",
    "accelerate==1.9.0",
    "protobuf==6.31.1",
    "opencv-python==4.11.0.86",
    "matplotlib==3.10.5",
    "umap-learn==0.5.9.post2",
    "hdbscan==0.8.40",
    "scikit-learn==1.6.1",
]

[tool.poetry.group.dev.dependencies]
mkdocs = ">=1.4,<2.0"
mkdocs-material = ">=9.1,<10.0"
mkdocstrings-python = ">=1.2,<2.0.0"
pytest = ">=7.0,<9.0"
pytest-cov = ">=4.0,<6.0"
pre-commit = "^4.2.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
    "C", # flake8-comprehensions
    "B", # flake8-bugbear
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by black
]
