[project]
name = "picsellia-cv-engine"
version = "0.1.0"
description = ""
authors = [
    { name = "SoniaGrh", email = "sonia.garrouch@hotmail.fr" }
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
picsellia = ">=6.20.0,<7.0.0"
tabulate = ">=0.8,<0.10"
numpy = ">=1.21,<2.0.0"
pandas = ">=1.3,<3.0.0"
pycocotools = ">=2.0.4,<3.0.0"
scikit-learn = ">=1.1,<1.7"

ultralytics = { version = ">=8.0,<9.0", extras = ["ultralytics"] }
torch = { version = "2.7.1", extras = ["ultralytics", "clip"] }

torchvision = { version = "0.22.1", extras = ["ultralytics", "clip"] }
datasets = { version = "4.0.0", extras = ["clip"] }
Pillow = { version = "10.3.0", extras = ["clip"] }
transformers = { version = "4.54.1", extras = ["clip"] }
accelerate = { version = "1.9.0", extras = ["clip"] }
protobuf = { version = "6.31.1", extras = ["clip"] }
matplotlib = { version = "3.10.5", extras = ["clip"] }
umap-learn = { version = "0.5.9.post2", extras = ["clip"] }
hdbscan = { version = "0.8.40", extras = ["clip"] }
opencv-python = { version = "4.11.0.86", extras = ["clip", "sam2"] }

tqdm = { version = "4.67.1", extras = ["sam2"] }
hydra-core = { version = "1.3.2", extras = ["sam2"] }
iopath = { version = "0.1.10", extras = ["sam2"] }
submitit = { version = "1.5.3", extras = ["sam2"] }
tensordict = { version = "0.5", extras = ["sam2"] }
tensorboard = { version = "2.20.0", extras = ["sam2"] }
fvcore = { version = "0.1.5.post20221221", extras = ["sam2"] }
sam-2 = { git = "https://github.com/facebookresearch/sam2.git", extras = ["sam2"] }

[tool.poetry.extras]
ultralytics = ["torch", "ultralytics"]
clip = [
  "torch",
  "torchvision",
  "datasets",
  "transformers",
  "accelerate",
  "protobuf",
  "opencv-python",
  "matplotlib",
  "umap-learn",
  "hdbscan",
]
sam2 = [
#    "torch",
#    "torchvision",
    "tqdm",
    "hydra-core",
    "iopath",
    "submitit",
    "tensordict",
    "tensorboard",
    "fvcore",
    "sam-2",
]

[tool.poetry.group.dev.dependencies]
mkdocs = ">=1.4,<2.0"
mkdocs-material = ">=9.1,<10.0"
mkdocstrings-python = ">=1.2,<2.0.0"
pytest = ">=7.0,<9.0"
pytest-cov = ">=4.0,<6.0"
pre-commit = "^4.2.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
    "C", # flake8-comprehensions
    "B", # flake8-bugbear
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by black
]
